# vz

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMPROVE_LOOP.md  LICENSE  PROGRESS.md  README.md  RULES.md  RUNBOOK.md  TODO.md  gate.sh  release-manifest.txt  run-loop.sh
.github/workflows/: ci.yml  docs.yml
.kiro/agents/: looper-3agent.json  looper-3agent.prompt.md
benches/: loading.rs
demo/: README.md  api_latency.tsv  benchmarks.json  cheatsheet.sh  cities.csv  company_growth.csv  languages.csv  response_times.csv  run_demo.sh  saas_revenue.csv  sales_data.csv  showcase.md  team_skills.csv
docs/: demo.md  index.html  index.md
docs/.vitepress/: config.ts
docs/guide/: chart-types.md  diff-mode.md  getting-started.md  output-modes.md  shell-completions.md
docs/ja/: demo.md  index.md
fixtures/: access_log.csv  body_measurements.csv  bom_sales.csv  code_demo.md  demo.md  departments.csv  exam_scores.csv  messy_data.csv  mixed_values.csv  sales.csv  scores.json  stock.csv  temperature.csv
fixtures/diff/: identical.csv  sales_after.csv  sales_before.csv  schema_mismatch.csv  timeseries_after.csv  timeseries_before.csv  ts_daily_after.csv  ts_daily_before.csv
fixtures/fixed_width/: df_h.txt  empty_values.txt  kubectl_get_pods.txt  kubectl_top_pods.txt  lsblk.txt  ps_aux.txt  separator_lines.txt  single_row.txt
scripts/: release.sh
scripts/hooks/: pre-push
skill/: SKILL.md
src/: diagnostics.rs  filter.rs  helpers.rs  info.rs  lib.rs  main.rs  pipeline.rs  sparkline.rs  svg.rs  table.rs  theme.rs  util.rs  watch.rs
src/chart/: data_builder.rs  data_builder_tests.rs  mod.rs  selector.rs  selector_tests.rs
src/cli/: args.rs  mod.rs  types.rs
src/diff/: compute.rs  mod.rs  render.rs  schema.rs  tests.rs
tests/: integration_test.rs  snapshot_test.rs
(+109 files in other folders)
